@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,17 +24,16 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng/othervm -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=true -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=false -Xverify:all TestAdaptVarHandles
  * @run testng/othervm -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=true -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=true -Xverify:all TestAdaptVarHandles
  * @run testng/othervm -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=false -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=false -Xverify:all TestAdaptVarHandles
  * @run testng/othervm -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=false -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=true -Xverify:all TestAdaptVarHandles
  */
 
-import jdk.incubator.foreign.MemoryHandles;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.ValueLayout;
 import org.testng.annotations.*;
 import static org.testng.Assert.*;
 
@@ -85,8 +84,7 @@ public class TestAdaptVarHandles {
         }
     }
 
-    static final VarHandle intHandleIndexed = MemoryLayout.sequenceLayout(ValueLayout.JAVA_INT)
-            .varHandle(MemoryLayout.PathElement.sequenceElement());
+    static final VarHandle intHandleIndexed = ValueLayout.JAVA_INT.arrayElementVarHandle();
 
     static final VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
 
@@ -95,9 +93,9 @@ public class TestAdaptVarHandles {
     @Test
     public void testFilterValue() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
         VarHandle intHandle = layout.varHandle();
-        VarHandle i2SHandle = MemoryHandles.filterValue(intHandle, S2I, I2S);
+        VarHandle i2SHandle = MethodHandles.filterValue(intHandle, S2I, I2S);
         i2SHandle.set(segment, "1");
         String oldValue = (String)i2SHandle.getAndAdd(segment, "42");
         assertEquals(oldValue, "1");
@@ -114,11 +112,11 @@ public class TestAdaptVarHandles {
     @Test
     public void testFilterValueComposite() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
         VarHandle intHandle = layout.varHandle();
         MethodHandle CTX_S2I = MethodHandles.dropArguments(S2I, 0, String.class, String.class);
-        VarHandle i2SHandle = MemoryHandles.filterValue(intHandle, CTX_S2I, CTX_I2S);
-        i2SHandle = MemoryHandles.insertCoordinates(i2SHandle, 1, "a", "b");
+        VarHandle i2SHandle = MethodHandles.filterValue(intHandle, CTX_S2I, CTX_I2S);
+        i2SHandle = MethodHandles.insertCoordinates(i2SHandle, 1, "a", "b");
         i2SHandle.set(segment, "1");
         String oldValue = (String)i2SHandle.getAndAdd(segment, "42");
         assertEquals(oldValue, "ab1");
@@ -135,9 +133,9 @@ public class TestAdaptVarHandles {
     @Test
     public void testFilterValueLoose() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
         VarHandle intHandle = layout.varHandle();
-        VarHandle i2SHandle = MemoryHandles.filterValue(intHandle, O2I, I2O);
+        VarHandle i2SHandle = MethodHandles.filterValue(intHandle, O2I, I2O);
         i2SHandle.set(segment, "1");
         String oldValue = (String)i2SHandle.getAndAdd(segment, "42");
         assertEquals(oldValue, "1");
@@ -153,25 +151,25 @@ public class TestAdaptVarHandles {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterCarrier() {
-        MemoryHandles.filterValue(floatHandle, S2I, I2S);
+        MethodHandles.filterValue(floatHandle, S2I, I2S);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterUnboxArity() {
         VarHandle floatHandle = ValueLayout.JAVA_INT.varHandle();
-        MemoryHandles.filterValue(floatHandle, S2I.bindTo(""), I2S);
+        MethodHandles.filterValue(floatHandle, S2I.bindTo(""), I2S);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterBoxArity() {
         VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
-        MemoryHandles.filterValue(intHandle, S2I, I2S.bindTo(42));
+        MethodHandles.filterValue(intHandle, S2I, I2S.bindTo(42));
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterBoxPrefixCoordinates() {
         VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
-        MemoryHandles.filterValue(intHandle,
+        MethodHandles.filterValue(intHandle,
                 MethodHandles.dropArguments(S2I, 1, int.class),
                 MethodHandles.dropArguments(I2S, 1, long.class));
     }
@@ -179,21 +177,21 @@ public class TestAdaptVarHandles {
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterBoxException() {
         VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
-        MemoryHandles.filterValue(intHandle, I2S, S2L_EX);
+        MethodHandles.filterValue(intHandle, I2S, S2L_EX);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterUnboxException() {
         VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
-        MemoryHandles.filterValue(intHandle, S2L_EX, I2S);
+        MethodHandles.filterValue(intHandle, S2L_EX, I2S);
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
     public void testBadFilterBoxHandleException() {
         VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
-        VarHandle vh = MemoryHandles.filterValue(intHandle, S2I, I2S_EX);
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment seg = MemorySegment.allocateNative(ValueLayout.JAVA_INT, scope);
+        VarHandle vh = MethodHandles.filterValue(intHandle, S2I, I2S_EX);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment seg = MemorySegment.allocateNative(ValueLayout.JAVA_INT, session);
             vh.set(seg, "42");
             String x = (String) vh.get(seg); // should throw
         }
@@ -202,9 +200,9 @@ public class TestAdaptVarHandles {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testBadFilterUnboxHandleException() {
         VarHandle intHandle = ValueLayout.JAVA_INT.varHandle();
-        VarHandle vh = MemoryHandles.filterValue(intHandle, S2I_EX, I2S);
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment seg = MemorySegment.allocateNative(ValueLayout.JAVA_INT, scope);
+        VarHandle vh = MethodHandles.filterValue(intHandle, S2I_EX, I2S);
+        try (MemorySession session = MemorySession.openConfined()) {
+            MemorySegment seg = MemorySegment.allocateNative(ValueLayout.JAVA_INT, session);
             vh.set(seg, "42"); // should throw
         }
     }
@@ -212,8 +210,8 @@ public class TestAdaptVarHandles {
     @Test
     public void testFilterCoordinates() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
-        VarHandle intHandle_longIndex = MemoryHandles.filterCoordinates(intHandleIndexed, 0, BASE_ADDR, S2L);
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        VarHandle intHandle_longIndex = MethodHandles.filterCoordinates(intHandleIndexed, 0, BASE_ADDR, S2L);
         intHandle_longIndex.set(segment, "0", 1);
         int oldValue = (int)intHandle_longIndex.getAndAdd(segment, "0", 42);
         assertEquals(oldValue, 1);
@@ -229,34 +227,34 @@ public class TestAdaptVarHandles {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterCoordinatesNegativePos() {
-        MemoryHandles.filterCoordinates(intHandle, -1, SUM_OFFSETS);
+        MethodHandles.filterCoordinates(intHandle, -1, SUM_OFFSETS);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterCoordinatesPosTooBig() {
-        MemoryHandles.filterCoordinates(intHandle, 1, SUM_OFFSETS);
+        MethodHandles.filterCoordinates(intHandle, 1, SUM_OFFSETS);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterCoordinatesWrongFilterType() {
-        MemoryHandles.filterCoordinates(intHandleIndexed, 1, S2I);
+        MethodHandles.filterCoordinates(intHandleIndexed, 1, S2I);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterCoordinatesWrongFilterException() {
-        MemoryHandles.filterCoordinates(intHandleIndexed, 1, S2L_EX);
+        MethodHandles.filterCoordinates(intHandleIndexed, 1, S2L_EX);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadFilterCoordinatesTooManyFilters() {
-        MemoryHandles.filterCoordinates(intHandleIndexed, 1, S2L, S2L);
+        MethodHandles.filterCoordinates(intHandleIndexed, 1, S2L, S2L);
     }
 
     @Test
     public void testInsertCoordinates() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
-        VarHandle intHandle_longIndex = MemoryHandles.insertCoordinates(intHandleIndexed, 0, segment, 0L);
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        VarHandle intHandle_longIndex = MethodHandles.insertCoordinates(intHandleIndexed, 0, segment, 0L);
         intHandle_longIndex.set(1);
         int oldValue = (int)intHandle_longIndex.getAndAdd(42);
         assertEquals(oldValue, 1);
@@ -272,29 +270,29 @@ public class TestAdaptVarHandles {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadInsertCoordinatesNegativePos() {
-        MemoryHandles.insertCoordinates(intHandle, -1, 42);
+        MethodHandles.insertCoordinates(intHandle, -1, 42);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadInsertCoordinatesPosTooBig() {
-        MemoryHandles.insertCoordinates(intHandle, 1, 42);
+        MethodHandles.insertCoordinates(intHandle, 1, 42);
     }
 
     @Test(expectedExceptions = ClassCastException.class)
     public void testBadInsertCoordinatesWrongCoordinateType() {
-        MemoryHandles.insertCoordinates(intHandleIndexed, 1, "Hello");
+        MethodHandles.insertCoordinates(intHandleIndexed, 1, "Hello");
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadInsertCoordinatesTooManyValues() {
-        MemoryHandles.insertCoordinates(intHandleIndexed, 1, 0L, 0L);
+        MethodHandles.insertCoordinates(intHandleIndexed, 1, 0L, 0L);
     }
 
     @Test
     public void testPermuteCoordinates() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
-        VarHandle intHandle_swap = MemoryHandles.permuteCoordinates(intHandleIndexed,
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        VarHandle intHandle_swap = MethodHandles.permuteCoordinates(intHandleIndexed,
                 List.of(long.class, MemorySegment.class), 1, 0);
         intHandle_swap.set(0L, segment, 1);
         int oldValue = (int)intHandle_swap.getAndAdd(0L, segment, 42);
@@ -311,29 +309,29 @@ public class TestAdaptVarHandles {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadPermuteCoordinatesTooManyCoordinates() {
-        MemoryHandles.permuteCoordinates(intHandle, List.of(int.class, int.class), new int[2]);
+        MethodHandles.permuteCoordinates(intHandle, List.of(int.class, int.class), new int[2]);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadPermuteCoordinatesTooFewCoordinates() {
-        MemoryHandles.permuteCoordinates(intHandle, List.of());
+        MethodHandles.permuteCoordinates(intHandle, List.of());
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadPermuteCoordinatesIndexTooBig() {
-        MemoryHandles.permuteCoordinates(intHandle, List.of(int.class, int.class), 3);
+        MethodHandles.permuteCoordinates(intHandle, List.of(int.class, int.class), 3);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadPermuteCoordinatesIndexTooSmall() {
-        MemoryHandles.permuteCoordinates(intHandle, List.of(int.class, int.class), -1);
+        MethodHandles.permuteCoordinates(intHandle, List.of(int.class, int.class), -1);
     }
 
     @Test
     public void testCollectCoordinates() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
-        VarHandle intHandle_sum = MemoryHandles.collectCoordinates(intHandleIndexed, 1, SUM_OFFSETS);
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        VarHandle intHandle_sum = MethodHandles.collectCoordinates(intHandleIndexed, 1, SUM_OFFSETS);
         intHandle_sum.set(segment, -2L, 2L, 1);
         int oldValue = (int)intHandle_sum.getAndAdd(segment, -2L, 2L, 42);
         assertEquals(oldValue, 1);
@@ -349,34 +347,34 @@ public class TestAdaptVarHandles {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadCollectCoordinatesNegativePos() {
-        MemoryHandles.collectCoordinates(intHandle, -1, SUM_OFFSETS);
+        MethodHandles.collectCoordinates(intHandle, -1, SUM_OFFSETS);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadCollectCoordinatesPosTooBig() {
-        MemoryHandles.collectCoordinates(intHandle, 1, SUM_OFFSETS);
+        MethodHandles.collectCoordinates(intHandle, 1, SUM_OFFSETS);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadCollectCoordinatesWrongFilterType() {
-        MemoryHandles.collectCoordinates(intHandle, 0, SUM_OFFSETS);
+        MethodHandles.collectCoordinates(intHandle, 0, SUM_OFFSETS);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadCollectCoordinatesWrongVoidFilterType() {
-        MemoryHandles.collectCoordinates(intHandle, 0, VOID_FILTER);
+        MethodHandles.collectCoordinates(intHandle, 0, VOID_FILTER);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadCollectCoordinatesWrongFilterException() {
-        MemoryHandles.collectCoordinates(intHandle, 0, S2L_EX);
+        MethodHandles.collectCoordinates(intHandle, 0, S2L_EX);
     }
 
     @Test
     public void testDropCoordinates() throws Throwable {
         ValueLayout layout = ValueLayout.JAVA_INT;
-        MemorySegment segment = MemorySegment.allocateNative(layout, ResourceScope.newImplicitScope());
-        VarHandle intHandle_dummy = MemoryHandles.dropCoordinates(intHandleIndexed, 1, float.class, String.class);
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        VarHandle intHandle_dummy = MethodHandles.dropCoordinates(intHandleIndexed, 1, float.class, String.class);
         intHandle_dummy.set(segment, 1f, "hello", 0L, 1);
         int oldValue = (int)intHandle_dummy.getAndAdd(segment, 1f, "hello", 0L, 42);
         assertEquals(oldValue, 1);
@@ -392,12 +390,12 @@ public class TestAdaptVarHandles {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadDropCoordinatesNegativePos() {
-        MemoryHandles.dropCoordinates(intHandle, -1);
+        MethodHandles.dropCoordinates(intHandle, -1);
     }
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadDropCoordinatesPosTooBig() {
-        MemoryHandles.dropCoordinates(intHandle, 2);
+        MethodHandles.dropCoordinates(intHandle, 2);
     }
 
     //helper methods
